# RGBRec

./: .gitignore  CMakeLists.txt  Rec.pro  fileio.cpp  fileio.cpp.autosave  fileio.h  recon.cpp  recon.h  recon.ui  showPLY.py  utils.cpp  utils.h
QtGUI/: CMakeLists.txt  fileio.h  main.cpp  recon.cpp  utils.cpp
SfMlib/: BAUtil.cpp  BAUtil.h  CMakeLists.txt  Common.cpp  Common.h  FeatureUtils.cpp  FeatureUtils.h  SfM.cpp  SfM.h  StereoUtils.cpp  StereoUtils.h  sfmtest.cpp  tt.cpp
